; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_misc.c_linux_gettid.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_misc.c_linux_gettid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32* }
%struct.linux_gettid_args = type { i32 }
%struct.linux_emuldata = type { i32 }

@.str = private unnamed_addr constant [29 x i8] c"gettid: emuldata not found.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @linux_gettid(%struct.thread* %0, %struct.linux_gettid_args* %1) #0 {
  %3 = alloca %struct.thread*, align 8
  %4 = alloca %struct.linux_gettid_args*, align 8
  %5 = alloca %struct.linux_emuldata*, align 8
  store %struct.thread* %0, %struct.thread** %3, align 8
  store %struct.linux_gettid_args* %1, %struct.linux_gettid_args** %4, align 8
  %6 = load %struct.thread*, %struct.thread** %3, align 8
  %7 = call %struct.linux_emuldata* @em_find(%struct.thread* %6)
  store %struct.linux_emuldata* %7, %struct.linux_emuldata** %5, align 8
  %8 = load %struct.linux_emuldata*, %struct.linux_emuldata** %5, align 8
  %9 = icmp ne %struct.linux_emuldata* %8, null
  %10 = zext i1 %9 to i32
  %11 = call i32 @KASSERT(i32 %10, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %12 = load %struct.linux_emuldata*, %struct.linux_emuldata** %5, align 8
  %13 = getelementptr inbounds %struct.linux_emuldata, %struct.linux_emuldata* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.thread*, %struct.thread** %3, align 8
  %16 = getelementptr inbounds %struct.thread, %struct.thread* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 0
  store i32 %14, i32* %18, align 4
  ret i32 0
}

declare dso_local %struct.linux_emuldata* @em_find(%struct.thread*) #1

declare dso_local i32 @KASSERT(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
